--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:uNBS17U7D5pBSfyCgZAuedNeZR30O4som1iC3Tb1nsU=
 APP_DEBUG=true
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=syncight
+DB_USERNAME=sail
+DB_PASSWORD=password
