--- a/.env
+++ b/.env
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OPENAI_API_KEY = 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
+RAPID_API_KEY = be766bc553msh745a5826541da61p1ab31bjsn6476950f3bd2
